# RbowtieCuda

./: .BBSoptions  DESCRIPTION  INSTALL  LICENSE  LICENSE.md  NAMESPACE  README.md  _pkgdown.yml
R/: bowtieCuda.R  zzz.R
docs/: 404.html  authors.html  index.html  pkgdown.yml  search.json  sitemap.xml
docs/articles/: RbowtieCuda-Introduction.html  index.html
docs/reference/: dot-callbinary2.html  index.html  nvBWT.html  nvBowtie.html  nvBowtie_usage.html  nvBowtie_version.html  nvbio_tests.html
inst/: NEWS  installation_cuda11.8.sh  installation_cuda12.4.sh
inst/doc/: RbowtieCuda-Introduction.R  RbowtieCuda-Introduction.Rmd
inst/scripts/: check_requirements.sh  installation_cuda.sh  installation_cuda11.8.sh  installation_cuda12.4.sh  installation_cuda12.8.sh  verif.sh  verif_installation_cuda.sh
inst/unitTests/: test_alignment.R
man/: dot-callbinary2.Rd  nvBWT.Rd  nvBowtie.Rd  nvBowtie_usage.Rd  nvBowtie_version.Rd  nvbio_tests.Rd
src/: Makefile  Makefile.win
src/nvbio/: CMakeLists.txt  LICENSE
src/nvbio/contrib/bamtools/: BGZF.h  CMakeLists.txt
src/nvbio/contrib/crc/: CMakeLists.txt
src/nvbio/contrib/htslib/: bgzf.c  hts.c  kfunc.c
src/nvbio/contrib/lz4/: CMakeLists.txt
src/nvbio/contrib/moderngpu/: CMakeLists.txt
src/nvbio/contrib/moderngpu/include/: sparsematrix.h
src/nvbio/contrib/moderngpu/include/device/: devicetypes.cuh
src/nvbio/contrib/moderngpu/src/: mgpucontext.cu  mgpuutil.cpp  mmio.cpp  sparsematrix.cpp
src/nvbio/contrib/moderngpu/src/moderngpu/: intrinsics.hxx
src/nvbio/contrib/thrust/: CMakeLists.txt
src/nvbio/contrib/thrust/thrust/detail/: memory_wrapper.h
src/nvbio/contrib/thrust/thrust/detail/allocator/: allocator_traits.inl
src/nvbio/contrib/zlib-1.2.7/: CMakeLists.txt  crc32.c  trees.c
src/nvbio/contrib/zlib-1.2.7/win32/: zlib1.rc
src/nvbio/examples/hello_world/: CMakeLists.txt
src/nvbio/examples/hello_world2/: CMakeLists.txt
src/nvbio/nvBWT/: CMakeLists.txt  filelist.cpp  nvBWT.cu
src/nvbio/nvBowtie/: CMakeLists.txt  nvBowtie.cpp  nvBowtie.cu
src/nvbio/nvBowtie/bowtie2/: CMakeLists.txt
src/nvbio/nvBowtie/bowtie2/cuda/: CMakeLists.txt  aligner.h  aligner_all.h  aligner_best_approx.h  aligner_best_approx_paired.h  aligner_best_approx_paired_wfa.cu  aligner_best_approx_wfa.cu  aligner_best_exact.h  aligner_init.cu  aligner_inst.h  aligner_sort.cu  alignment_utils.h  compute_thread.cu  compute_thread.h  defs.h  mapping.cu  mapping.h  mapping_impl.h  mapping_inl.h  output_thread.cu  output_thread.h  params.cpp  params.h  persist.cu  pipeline_states.h  reads_def.h  reduce.cu  reduce.h  reduce_inl.h  score.cu  score.h  score_all.cu  score_all_inl.h  score_best.cu  score_best_inl.h  score_gapped.cu  score_opposite_inl.h  score_paired.cu  score_paired_inl.h  score_ungapped.cu  (+12 more)
src/nvbio/nvbio/: CMakeLists.txt  LICENCE
src/nvbio/nvbio-aln-diff/: filter.h  html.h  pe_analyzer.cpp  se_analyzer.cpp
src/nvbio/nvbio-test/: CMakeLists.txt  alignment_test.cu  alignment_test_utils.h  bloom_filter_test.cu  condtion_test.cu  fmindex_test.cu  nvbio-test.cpp  nvbio-test.cu  string_set_test.cu  syncblocks_test.cu  work_queue_test.cu
src/nvbio/nvbio/alignment/: alignment.h  alignment_base.h  alignment_inl.h  banded_inl.h  batched.h  batched_banded_inl.h  batched_inl.h  batched_stream.h  utils.h  utils_inl.h  wfa.h
src/nvbio/nvbio/alignment/ed/: ed_banded_inl.h  ed_inl.h
src/nvbio/nvbio/alignment/gotoh/: gotoh_banded_inl.h  gotoh_inl.h
src/nvbio/nvbio/alignment/hamming/: hamming_inl.h
src/nvbio/nvbio/alignment/myers/: myers_banded_inl.h
src/nvbio/nvbio/alignment/sw/: sw_banded_inl.h  sw_inl.h
src/nvbio/nvbio/alignment/wfah/: wfah_banded_inl.h  wfah_inl.h  wfah_warp_inl.h
src/nvbio/nvbio/basic/: CMakeLists.txt  bnt.cu  dna.h  html.cu  iterator.h  numbers.h  packedstream_inl.h  primitives_inl.h  static_vector.h  threads.cpp  transform_iterator.h  types.h  vector.h  vector_array.h  version.h
src/nvbio/nvbio/basic/cuda/: arch.h  arch_inl.h  condition.h  host_device_buffer.h  ldg.h  pingpong_queues.h  primitives.h  primitives_inl.h  scan.h  scan_test.cu  sort.cu  sort.h  syncblocks.h  syncblocks_inl.h  tex.h  timer.h  work_queue.h  work_queue_inl.h  work_queue_multipass.h  work_queue_multipass_inl.h  work_queue_ordered.h  work_queue_ordered_inl.h  work_queue_persistent.h  work_queue_persistent_inl.h
src/nvbio/nvbio/fasta/: fasta_inl.h
src/nvbio/nvbio/fastq/: fastq_inl.h
src/nvbio/nvbio/fmindex/: CMakeLists.txt  filter_inl.h  mem_inl.h  ssa.h  ssa_inl.h
src/nvbio/nvbio/io/: CMakeLists.txt  utils.h
src/nvbio/nvbio/io/fmindex/: fmindex.h  fmindex_impl.cu
src/nvbio/nvbio/io/output/: CMakeLists.txt  output_bam.cpp  output_bam.h  output_batch.cpp  output_batch.h  output_debug.cpp  output_debug.h  output_file.cpp  output_file.h  output_sam.cpp  output_sam.h
src/nvbio/nvbio/io/reads/: bam.h  sam.h
src/nvbio/nvbio/io/sequence/: CMakeLists.txt  sequence.h
src/nvbio/nvbio/qgram/: filter_inl.h  qgram_inl.h  qgroup_inl.h
src/nvbio/nvbio/strings/: string_iterator.h  string_set.h  string_set_inl.h  wavelet_tree_inl.h
src/nvbio/nvbio/sufsort/: blockwise_sufsort.h  bwte.h  bwte_inl.h  compression_sort.h  file_bwt.cu  file_bwt_bgz.cu  file_bwt_lz4.cu  prefix_doubling_sufsort.h  sufsort.h  sufsort_bucketing.h  sufsort_inl.h  sufsort_priv.cu  sufsort_priv.h
src/nvbio/prototypes/bamsort/: bam_io.cu  bam_sort.cu
src/nvbio/sufsort-test/: sufsort_test.cu
src/nvbio/sw-benchmark/: sw-benchmark.cu
tests/: runTests.R
vignettes/: RbowtieCuda-Introduction.Rmd  debug.txt
